syntax = "proto3";

package backend_golang_test.user.v1;

import "google/protobuf/timestamp.proto";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest {
    string name = 1;
    string password = 2;
    string email = 3;
    optional string created_by = 4;
}

message CreateUserResponse {}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}

message GetUsersRequest {
    optional string name = 1;
    optional string email = 2;
}

message GetUsersResponse {
    repeated User data = 2;
}

message UpdateUserRequest {
    string id = 1;
    optional string name = 2;
    optional string email = 3;
}

message UpdateUserResponse {}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    optional string created_by = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
    optional google.protobuf.Timestamp deleted_at = 7;
}